--- a/app/src/main/res/layout/fragment_plaid.xml
+++ b/app/src/main/res/layout/fragment_plaid.xml
@@ -8,33 +8,17 @@
     android:orientation="vertical"
     tools:context=".PlaidFragment">
 
-
-    <ScrollView
-        android:id="@+id/text_ll"
+    <de.codecrafters.tableview.SortableTableView
+        android:id="@+id/plaid_table"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_margin="10dp"
-        android:layout_weight="1">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/black">
-
-            <TextView
-                android:id="@+id/plaid_result"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="7dp"
-                android:background="@color/white"
-                android:hint="Simple result" />
-            <!--            android:gravity="center"-->
-        </LinearLayout>
-    </ScrollView>
+        android:layout_margin="@dimen/default_margin"
+        android:layout_weight="1" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="0dp"
+        android:layout_margin="@dimen/default_margin"
         android:layout_weight="1"
         android:gravity="center">
 
@@ -48,11 +32,12 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="0dp"
+        android:layout_margin="@dimen/default_margin"
         android:layout_weight="1"
         android:gravity="center">
 
         <Button
-            android:id="@+id/back"
+            android:id="@+id/plaid_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="back" />
