--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,6 +14,9 @@
             app:destination="@id/plaidFragment"
             app:enterAnim="@android:anim/fade_in"
             app:exitAnim="@android:anim/fade_out" />
+        <action
+            android:id="@+id/action_homeFragment_to_SQLFragment"
+            app:destination="@id/SQLFragment" />
     </fragment>
     <fragment
         android:id="@+id/plaidFragment"
@@ -25,6 +28,14 @@
             app:destination="@id/homeFragment"
             app:enterAnim="@android:anim/fade_in"
             app:exitAnim="@android:anim/fade_out" />
+    </fragment>
+    <fragment
+        android:id="@+id/SQLFragment"
+        android:name="com.maxdreher.intermediate.SQLFragment"
+        android:label="SQLFragment" >
+        <action
+            android:id="@+id/action_SQLFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
     </fragment>
 
 
