Add Simple.Transaction to Amplify

--- a/app/src/main/res/layout/fragment_plaid.xml
+++ b/app/src/main/res/layout/fragment_plaid.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".PlaidFragment">
+    tools:context=".fragments.PlaidFragment">
 
     <de.codecrafters.tableview.SortableTableView
         android:id="@+id/plaid_table"
