--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,9 +6,9 @@
     app:startDestination="@id/homeFragment">
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.maxdreher.intermediate.HomeFragment"
+        android:name="com.maxdreher.intermediate.fragments.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" >
+        tools:layout="@layout/fragment_home">
         <action
             android:id="@+id/action_homeFragment_to_plaidFragment"
             app:destination="@id/plaidFragment"
@@ -20,9 +20,9 @@
     </fragment>
     <fragment
         android:id="@+id/plaidFragment"
-        android:name="com.maxdreher.intermediate.PlaidFragment"
+        android:name="com.maxdreher.intermediate.fragments.PlaidFragment"
         android:label="fragment_plaid"
-        tools:layout="@layout/fragment_plaid" >
+        tools:layout="@layout/fragment_plaid">
         <action
             android:id="@+id/action_plaidFragment_to_homeFragment"
             app:destination="@id/homeFragment"
@@ -31,8 +31,8 @@
     </fragment>
     <fragment
         android:id="@+id/SQLFragment"
-        android:name="com.maxdreher.intermediate.SQLFragment"
-        android:label="SQLFragment" >
+        android:name="com.maxdreher.intermediate.fragments.SQLFragment"
+        android:label="SQLFragment">
         <action
             android:id="@+id/action_SQLFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
